Add images to index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 
-
+  <div class="clock-face">
+    <img src="hand hand-hour" alt="images/hand-hour.svg">
+    <img src="hand hand-minute" alt="images/hand-minute.svg">
+    <img src="clock-center" alt="images/clock-center.svg">
+  </div>
 
 </body>
 </html>
