--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
   <div class="clock-face">
-    <img class="hand hand-hour" src="images/hand-hour.svg">
-    <img class="hand hand-minute" src="images/hand-minute.svg">
-    <img class="clock-center" src="images/clock-center.svg">
+    <img alt="" class="hand hand-hour" src="images/hand-hour.svg">
+    <img alt="" class="hand hand-minute" src="images/hand-minute.svg">
+    <img alt="" class="clock-center" src="images/clock-center.svg">
   </div>
 
 </body>
